fix: z-index issue

--- a/src/styles/sectionStyles/navigation.css
+++ b/src/styles/sectionStyles/navigation.css
@@ -17,7 +17,7 @@ nav {
   width: 8rem;
   height: 4rem;
 
-  z-index: 1;
+  z-index: 9999;
 }
 
 #hamburger > g > line {
@@ -47,7 +47,7 @@ nav {
   left: 50%;
   transform: translate(-50%, -50%);
 
-  z-index: 1;
+  z-index: 9999;
   pointer-events: none;
 }
 
@@ -65,6 +65,8 @@ nav {
   clip-path: circle(0);
   background-color: var(--primary-color);
   pointer-events: none;
+
+  z-index: 999;
 }
 
 .is-pointer-events {
